--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "styleguidist server --config styleguide.config.cjs",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "pretty-quick": "pretty-quick"
   },
   "dependencies": {
     "rivet-core": "2.1.0"
@@ -38,8 +40,10 @@
     "babel-loader": "^8.2.5",
     "core-js": "3.25.5",
     "css-loader": "6.7.1",
+    "husky": "^8.0.0",
     "path": "0.12.7",
     "prettier": "2.7.1",
+    "pretty-quick": "^3.1.3",
     "prop-types": "15.8.1",
     "react-docgen": "5.4.3",
     "react-scripts": "5.0.1",
@@ -53,5 +57,10 @@
     "last 1 version",
     "Firefox ESR",
     "not dead"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
