--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "styleguidist server --config styleguide.config.cjs",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "pretty-quick": "pretty-quick"
   },
   "dependencies": {
     "rivet-core": "2.1.0"
@@ -29,22 +31,25 @@
     "react-dom": ">= 16"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react": "^7.18.6",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "7.19.3",
+    "@babel/preset-env": "7.19.4",
+    "@babel/preset-react": "7.18.6",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@vitejs/plugin-react": "2.1.0",
+    "babel-loader": "8.2.5",
     "core-js": "3.25.5",
     "css-loader": "6.7.1",
+    "husky": "8.0.0",
     "path": "0.12.7",
+    "prettier": "2.7.1",
+    "pretty-quick": "3.1.3",
     "prop-types": "15.8.1",
     "react-docgen": "5.4.3",
     "react-scripts": "5.0.1",
     "react-styleguidist": "11.2.0",
     "style-loader": "3.3.1",
-    "vite": "^3.1.0",
+    "vite": "3.1.0",
     "vite-plugin-externalize-deps": "0.1.5"
   },
   "browserslist": [
@@ -52,5 +57,10 @@
     "last 1 version",
     "Firefox ESR",
     "not dead"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
