--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "prop-types": "15.8.1",
+    "react-display-name": "0.2.5",
     "react-docgen": "5.4.3",
     "react-scripts": "5.0.1",
     "react-styleguidist": "13.0.0",
