--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "6.7.1",
     "husky": "8.0.0",
     "jest": "27.5.1",
+    "jest-junit": "15.0.0",
     "path": "0.12.7",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
