ci: configure coverage report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           command: npm run build
       - run:
           name: Test components
-          command: npm test -- -w 1 --collectCoverage=true --reporters=jest-junit
+          command: npm test -- -w 1 --coverage --reporters=jest-junit
       - store_test_results:
           path: ./junit.xml
       - codecov/upload:
