--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - store_test_results:
           path: ./junit.xml
       - codecov/upload:
-          file: ./junit.xml
+          file: ./coverage/cobertura-coverage.xml
 
 # Job orchestration
 workflows:
