392 - revert change package test script

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "styleguidist server --config styleguide.config.cjs",
     "dev": "vite",
     "license": "license-check-and-add add -f ./license-check-and-add-config.json",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "husky install",
