--- a/package.json
+++ b/package.json
@@ -118,10 +118,10 @@
     "publish-guide": "npx styleguidist build --config styleguide.config.cjs && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles"
   },
   "dependencies": {
-    "@react-aria/dialog": "3.5.1",
-    "@react-aria/overlays": "3.14.0",
-    "@react-aria/utils": "3.17.0",
-    "classnames": "2.3.1",
+    "@react-aria/dialog": "3.5.20",
+    "@react-aria/overlays": "3.24.0",
+    "@react-aria/utils": "3.26.0",
+    "classnames": "2.5.1",
     "rivet-core": "2.8.1"
   },
   "peerDependencies": {
@@ -129,35 +129,36 @@
     "react-dom": ">= 16"
   },
   "devDependencies": {
-    "@babel/core": "7.19.3",
-    "@babel/preset-env": "7.19.4",
+    "@babel/core": "7.26.0",
+    "@babel/preset-env": "7.26.0",
     "@babel/preset-react": "7.18.6",
-    "@testing-library/dom": "10.3.2",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.5.2",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "@vitejs/plugin-react": "4.3.1",
-    "babel-loader": "8.2.5",
-    "core-js": "3.25.5",
-    "css-loader": "6.7.1",
-    "gh-pages": "5.0.0",
-    "husky": "8.0.0",
-    "jest": "27.5.1",
-    "jest-junit": "15.0.0",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "4.3.4",
+    "babel-loader": "9.2.1",
+    "core-js": "3.39.0",
+    "css-loader": "7.1.2",
+    "gh-pages": "6.3.0",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-junit": "16.0.0",
     "license-check-and-add": "4.0.5",
     "path": "0.12.7",
-    "prettier": "2.7.1",
-    "pretty-quick": "3.1.3",
+    "prettier": "3.4.2",
+    "pretty-quick": "4.0.0",
     "prop-types": "15.8.1",
     "react-display-name": "0.2.5",
-    "react-docgen": "5.4.3",
+    "react-docgen": "7.1.0",
     "react-styleguidist": "13.1.3",
-    "semantic-release": "24.1.0",
-    "style-loader": "3.3.1",
-    "vite": "5.4.9",
-    "vite-plugin-externalize-deps": "0.1.5"
+    "semantic-release": "24.2.1",
+    "style-loader": "4.0.0",
+    "vite": "5.4.11",
+    "vite-plugin-externalize-deps": "0.8.0"
   },
   "release": {
     "branches": [
