--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - store_test_results:
           path: ./junit.xml
       - codecov/upload:
-          file: ./coverage/cobertura-coverage.xml
+          files: ./coverage/cobertura-coverage.xml
   # Publish the style guide to gh-pages
   publish_guide:
     <<: *defaults
