feat: #398 use rivet-icons v3
install `rivet-icons@3.0.0` and use it in every place where we were previously using custom SVGs (where possible)

--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "@react-aria/overlays": "3.24.0",
     "@react-aria/utils": "3.26.0",
     "classnames": "2.5.1",
-    "rivet-core": "2.8.1"
+    "rivet-core": "2.8.1",
+    "rivet-icons": "3.0.0"
   },
   "peerDependencies": {
     "react": ">= 16",
