--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     "@react-aria/utils": "3.26.0",
     "classnames": "2.5.1",
     "rivet-core": "2.8.1",
-    "rivet-icons": "3.0.0"
+    "rivet-icons": "3.0.0",
+    "uuid": "11.0.4"
   },
   "peerDependencies": {
     "react": ">= 16",
