--- a/package.json
+++ b/package.json
@@ -136,10 +136,11 @@
     "@react-aria/dialog": "3.5.20",
     "@react-aria/overlays": "3.24.0",
     "@react-aria/utils": "3.26.0",
-    "focus-trap-react": "11.0.2",
     "classnames": "2.5.1",
+    "focus-trap-react": "11.0.2",
     "rivet-core": "2.8.1",
     "rivet-icons": "3.0.0",
+    "rivet-stickers": "0.3.0",
     "uuid": "11.0.4"
   },
   "peerDependencies": {
