--- a/package.json
+++ b/package.json
@@ -139,11 +139,11 @@
     "classnames": "2.5.1",
     "focus-trap-react": "11.0.3",
     "rivet-core": "2.8.1",
-    "rivet-icons": "3.0.1",
-    "rivet-stickers": "0.3.1",
     "uuid": "11.0.5"
   },
   "peerDependencies": {
+    "rivet-icons": "~ 3.0.1",
+    "rivet-stickers": "~ 0.3.1",
     "react": ">= 16",
     "react-dom": ">= 16"
   },
@@ -174,6 +174,8 @@
     "react-display-name": "0.2.5",
     "react-docgen": "7.1.1",
     "react-styleguidist": "13.1.4",
+    "rivet-icons": "3.0.1",
+    "rivet-stickers": "0.3.1",
     "semantic-release": "24.2.3",
     "style-loader": "4.0.0",
     "vite": "6.1.1",
