--- a/package.json
+++ b/package.json
@@ -133,32 +133,33 @@
     "publish-guide": "npx styleguidist build --config styleguide.config.cjs && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles"
   },
   "dependencies": {
-    "@react-aria/dialog": "3.5.20",
-    "@react-aria/overlays": "3.24.0",
-    "@react-aria/utils": "3.26.0",
+    "@react-aria/dialog": "3.5.21",
+    "@react-aria/overlays": "3.25.0",
+    "@react-aria/utils": "3.27.0",
     "classnames": "2.5.1",
-    "focus-trap-react": "11.0.2",
+    "focus-trap-react": "11.0.3",
     "rivet-core": "2.8.1",
-    "rivet-stickers": "0.3.0",
-    "uuid": "11.0.4"
+    "uuid": "11.0.5"
   },
   "peerDependencies": {
+    "rivet-icons": "~ 3.0.1",
+    "rivet-stickers": "~ 0.3.1",
     "react": ">= 16",
     "react-dom": ">= 16"
   },
   "devDependencies": {
-    "@babel/core": "7.26.0",
-    "@babel/preset-env": "7.26.0",
-    "@babel/preset-react": "7.18.6",
+    "@babel/core": "7.26.9",
+    "@babel/preset-env": "7.26.9",
+    "@babel/preset-react": "7.26.3",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
-    "@testing-library/user-event": "14.5.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
     "babel-loader": "9.2.1",
-    "core-js": "3.39.0",
+    "core-js": "3.40.0",
     "css-loader": "7.1.2",
     "gh-pages": "6.3.0",
     "husky": "9.1.7",
@@ -167,16 +168,18 @@
     "jest-junit": "16.0.0",
     "license-check-and-add": "4.0.5",
     "path": "0.12.7",
-    "prettier": "3.4.2",
+    "prettier": "3.5.1",
     "pretty-quick": "4.0.0",
     "prop-types": "15.8.1",
     "react-display-name": "0.2.5",
-    "react-docgen": "7.1.0",
+    "react-docgen": "7.1.1",
     "react-styleguidist": "13.1.4",
-    "semantic-release": "24.2.1",
+    "rivet-icons": "3.0.1",
+    "rivet-stickers": "0.3.1",
+    "semantic-release": "24.2.3",
     "style-loader": "4.0.0",
-    "vite": "5.4.14",
-    "vite-plugin-externalize-deps": "0.8.0"
+    "vite": "6.1.1",
+    "vite-plugin-externalize-deps": "0.9.0"
   },
   "release": {
     "branches": [
