--- a/package.json
+++ b/package.json
@@ -142,44 +142,43 @@
     "uuid": "11.0.5"
   },
   "peerDependencies": {
-    "rivet-icons": "~ 3.0.1",
-    "rivet-stickers": "~ 0.3.1",
-    "react": ">= 16",
-    "react-dom": ">= 16"
+    "react": ">=16",
+    "react-dom": ">=16",
+    "rivet-icons": "~3.0.1",
+    "rivet-stickers": "~0.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.26.9",
-    "@babel/preset-env": "7.26.9",
-    "@babel/preset-react": "7.26.3",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.2.0",
+    "@babel/core": "7.28.3",
+    "@babel/preset-env": "7.28.3",
+    "@babel/preset-react": "7.27.1",
+    "@testing-library/dom": "10.4.1",
+    "@testing-library/jest-dom": "6.8.0",
+    "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-react": "4.3.4",
-    "babel-loader": "9.2.1",
-    "core-js": "3.40.0",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
+    "@vitejs/plugin-react": "5.0.1",
+    "babel-loader": "10.0.0",
+    "core-js": "3.45.1",
     "css-loader": "7.1.2",
     "gh-pages": "6.3.0",
     "husky": "9.1.7",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
     "jest-junit": "16.0.0",
     "license-check-and-add": "4.0.5",
     "path": "0.12.7",
-    "prettier": "3.5.1",
-    "pretty-quick": "4.0.0",
+    "prettier": "3.6.2",
+    "pretty-quick": "4.2.2",
     "prop-types": "15.8.1",
     "react-display-name": "0.2.5",
-    "react-docgen": "7.1.1",
+    "react-docgen": "8.0.1",
     "react-styleguidist": "13.1.4",
     "rivet-icons": "3.0.1",
     "rivet-stickers": "0.3.1",
-    "semantic-release": "24.2.3",
+    "semantic-release": "24.2.7",
     "style-loader": "4.0.0",
-    "vite": "6.3.4",
-    "vite-plugin-externalize-deps": "0.9.0"
+    "vite": "7.1.3"
   },
   "release": {
     "branches": [
