--- a/package.json
+++ b/package.json
@@ -142,10 +142,10 @@
     "uuid": "11.0.5"
   },
   "peerDependencies": {
-    "rivet-icons": "~ 3.0.1",
-    "rivet-stickers": "~ 0.3.1",
     "react": ">= 16",
-    "react-dom": ">= 16"
+    "react-dom": ">= 16",
+    "rivet-icons": "~ 3.0.1",
+    "rivet-stickers": "~ 0.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.26.9",
@@ -157,13 +157,13 @@
     "@testing-library/user-event": "14.6.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-react": "4.3.4",
+    "@vitejs/plugin-react": "5.0.2",
     "babel-loader": "9.2.1",
     "core-js": "3.40.0",
     "css-loader": "7.1.2",
     "gh-pages": "6.3.0",
     "husky": "9.1.7",
-    "jest": "29.7.0",
+    "jest": "30.1.3",
     "jest-environment-jsdom": "29.7.0",
     "jest-junit": "16.0.0",
     "license-check-and-add": "4.0.5",
@@ -172,14 +172,13 @@
     "pretty-quick": "4.0.0",
     "prop-types": "15.8.1",
     "react-display-name": "0.2.5",
-    "react-docgen": "7.1.1",
+    "react-docgen": "8.0.1",
     "react-styleguidist": "13.1.4",
     "rivet-icons": "3.0.1",
     "rivet-stickers": "0.3.1",
-    "semantic-release": "24.2.3",
+    "semantic-release": "24.2.8",
     "style-loader": "4.0.0",
-    "vite": "6.3.6",
-    "vite-plugin-externalize-deps": "0.9.0"
+    "vite": "7.1.3"
   },
   "release": {
     "branches": [
